--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 			how dark it really is.”</i>&nbsp;&nbsp;<sup class="footnote"><a id="fnref-4" href="#fn-4">4</a></sup> </blockquote>
 			I
 		enjoy reading about the concept of light from the perspective of various disciplines. By incorporating elements from
-		these sources into the context of the chapter ‘Sight’ I can awaken the memories I have regarding certain scenography
+		these sources into the context of the chapter <i>‘Sight’</i> I can awaken the memories I have regarding certain scenography
 		that I have encountered in the past. That happened for instance when I stumped upon this text by philosopher Hans
 		Blumenberg:</p>
 	
@@ -287,7 +287,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 		the chance to play with all of these values. By manipulating them our position towards these values changes. It's
 		the ‘invisible hand’ that influences perception. Light designers and scenographers program lights to coincide with,
 		or intentionally diverge, from the music's rhythms, allowing the eyes to take part in the experience. It’s a way to
-		let our ‘Sight’ enjoy the composition of the infinite loop of changing rhythms as well.</p>
+		let our <i>‘Sight’</i> enjoy the composition of the infinite loop of changing rhythms as well.</p>
 	
 	<p>Though not as literal as in the creation of light installations, light has been the most integral part of my creative
 		processes since I started creating. Light, in its many forms and manifestations, acts as a source of profound
@@ -352,7 +352,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 			<section style="color:#89b6ff">
 				<h2 id="chapter-2">02 | SOUND </h2>
 				<br>
-		<p>In the chapter 'Sound' I will further convey the connection I have with the energy-driven. As well in the visual as
+		<p>In the chapter <i>'Sound'</i> I will further convey the connection I have with the energy-driven. As well in the visual as
 			the sonic field. Electronic music, in the most literal sense, is made with electronic devices using electricity.
 			When its energy is being released it has the ability to transfer it to me. I'm often told that I have an energetic
 			character, and I believe that the energy-driven fuels that part of me.</p>
@@ -494,10 +494,10 @@ sentences until they resonate with truth, writing itself becomes a research meth
 			<h2 id="chapter-3">03 | SPACE </h2>
 			<br>
 			<p>
-				I interpret the meaning of the word 'Space' as one of being in a state of
+				I interpret the meaning of the word <i>'Space'</i> as one of being in a state of
 				space within the body and
-				mind. My ‘space’ is one of unstoppable energy. With the energy I gained from
-				‘Sight’ and ‘Sound’ I
+				mind. My <i>‘Space’</i> is one of unstoppable energy. With the energy I gained from
+				<i>‘Sight’</i> and <i>‘Sound’</i> I
 				can step in and contribute to the interplay between the different
 				manifestations. This interplay
 				creates Momentum within me.
@@ -529,7 +529,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 				with 3 friends for an ‘Electronic music night’
 				in which we drank beers and exchanged our current favorite tracks until the
 				early hours of the morning. But to enter my
-				‘Space’ both ‘Sight’ and ‘Sound’ have to be united. My last rave was around
+				<i>‘Space’</i> both <i>‘Sight’</i> and <i>‘Sound’</i> have to be united. My last rave was around
 				2 months ago and for the writing of this
 				last chapter, I felt it was necessary to enter the physical space of a rave
 				and open up to my ‘state of space’ in the
@@ -542,30 +542,17 @@ sentences until they resonate with truth, writing itself becomes a research meth
 				and took part in the ticket battle with fellow hungry ravers. The moment I
 				got a grip on a ticket it felt like I won a
 				prize. And so, my night of research could begin.
-				The line to enter the club was long and force full sounding electronic music
-				slipped out of the club through the
-				entrance. The first form of energy is already heard in line, and like the
-				emergence of a crescendo, it created tension
-				within me. After entering and finding lockers to free ourselves from our
-				everyday possessions, my two friends and I went
-				on a little explorative trip throughout the club. A place where I have been
-				multiple times. But tonight will officially
-				be the last as this is the closing party of the club. The rave is spread
-				throughout 3 areas. Attending a multi-area club
-				offers the thrill of experiencing different adventures in one night,
-				Entering various landscapes where different
-				languages are spoken with varying tempos and intensities.
 			</p>
 
-
+			<br>
 			<p>
-				The line to enter the club was long and force full sounding electronic music
-				slipped out of the club through the
+				The line to enter the club is long and force full sounding electronic music
+				slippes out of the club through the
 				entrance. The first form of energy is already heard in line, and like the
-				emergence of a crescendo, it created
+				emergence of a crescendo, it creates
 				tension within me. After entering and finding lockers to free ourselves from
 				our everyday possessions, my two
-				friends and I went on a little explorative trip throughout the club. A place
+				friends and I go on a little explorative trip throughout the club. A place
 				where I have been multiple times. But
 				tonight will officially be the last as this is the closing party of the
 				club. The rave is spread throughout 3 areas.
@@ -574,7 +561,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 				landscapes where different languages are spoken with varying tempos and
 				intensities.
 			</p>
-
+			<br>
 			<p>
 				I consciously absorb everything around me. I document the thoughts that
 				strike me on the Notes app on my phone.
@@ -590,7 +577,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 				DJs switch time slots. I'm open and
 				prepared for any experience that comes my way.
 			</p>
-
+			<br>
 			<p>
 				Above the first area, a light installation is installed In which three
 				rectangles intersect each other. In these
@@ -603,16 +590,16 @@ sentences until they resonate with truth, writing itself becomes a research meth
 				these "stars" follow a path designated by the light designer. This is the
 				visual energy that was stored in
 				preparation for the event and now, finally has been released to assist me in
-				my journey to ‘Space’. The speed of the
+				my journey to <i>‘Space’</i>. The speed of the
 				running stars adapts to the changing pace of the music. They support me in
 				the act of surrendering myself to the
 				trance-inducing rhythms within my sight and the sound.
 			</p>
-
+			<br>
 			<p>
-				Often the title of a track or a small line of text with a powerful message
+				Sometimes the title of a track or a small line of text with a powerful message
 				is used as additional vocal power to add
-				energy to a track. While dancing, I noticed the repetition of these small
+				energy to a track. While dancing, I notice the repetition of these small
 				sections of text function similarly to a
 				mantra. Initially, the mantra is repeated until I fully embody its message.
 				I envision the vocals leading a slowly
@@ -620,12 +607,10 @@ sentences until they resonate with truth, writing itself becomes a research meth
 				persuasion, new electronic sounds join the
 				march one by one in the order of the often 4/4 beat.
 			</p>
-
+			<br>
 			<p>
-				Raves alter our perception of time, reshaping it around the duration of the
-				experience. Raves can last for hours or
-				even days, temporarily altering our perception of time once we're immersed
-				in 'Space'. The timeframe of the night is
+				Raves can last for hours or even days, temporarily altering our perception of time once we're immersed
+				in <i>'Space'</i>. The timeframe of the night is
 				segmented with various stories being narrated. I wrote in my notes while
 				dancing: “Some choose to write poems others
 				write novels”. Some DJs tell their stories by highlighting the chores in
@@ -640,9 +625,9 @@ sentences until they resonate with truth, writing itself becomes a research meth
 				transforming the narrative into one that
 				includes everyone.
 			</p>
-
+			<br>
 			<p>
-				I enter my ’Space’. I adapt the movements I make with my body to whatever
+				I enter my <i>’Space’</i>. I adapt the movements I make with my body to whatever
 				tension the track is building up. My feet
 				follow the consistent underlying four-beat bass drum of the track. My left
 				and right foot alternate. I start with
@@ -671,7 +656,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 				the tension of the track going bigger and
 				bigger. Just like a conductor would do. It reminds me of the video I
 				introduced earlier. Here the conductor directed
-				the Montpellier Orchestra and Jeff Mills. In the situation of my ‘Space’ the
+				the Montpellier Orchestra and Jeff Mills. In the situation of my <i>‘Space’</i> the
 				same thing happens to me but then the
 				other way around. The music acts as the conductor of which movements I make
 				and with what conviction I carry them
@@ -682,7 +667,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 			<p>
 				To elaborate on the impact of music as a tool to unfold normally hidden
 				facets of people’s persona, I'm including a
-				video artwork from 2009 by Rineke Dijkstra called,<i> ‘The Krazyhouse’.</i> &nbsp;
+				video artwork from 2009 by Rineke Dijkstra called,<i> ‘The Krazyhouse’.</i>
 				<sup class="footnote"><a id="fnref-12" href="#fn-12">12</a></sup> &nbsp;The
 				artwork contains 5 videos of teenagers,
 				named Megan, Simon, Nicky, Philip, and Dee. In the video, the teenagers
@@ -712,12 +697,13 @@ sentences until they resonate with truth, writing itself becomes a research meth
 				the immediate influence of music on
 				dance as a general phenomenon. In some videos, you can see teenagers
 				struggling at first. However, once they
-				surrender to the music, they enter their 'Space'. Analyzing the video
+				surrender to the music, they enter their <i>'Space'</i>. Analyzing the video
 				artwork led me to question whether these five
-				individuals are aware of their 'momentum'. If they know how to recharge, and
-				if entering their 'space' is their
-				method for doing so.
+				individuals are aware of their <i>'Momentum'</i>. If they know how to recharge, and
+				if entering their <i>'Space'</i> is their
+				method for doing so as well.
 			</p>
+			<br>
 			<p>
 				My inner energy is being activated. It’s my fuel to stay on the dance hour
 				after hour. It’s so addictive that I
@@ -737,7 +723,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 				There have been a few times that fellow
 				ravers came up to me to thank me for the energy I carried out. I can tell
 				you without hesitation that those moments
-				in ‘Space’ were some of the best moments in my life.
+				in <i>‘Space’</i> were some of the best moments in my life.
 			</p>
 
 	</div>
@@ -785,8 +771,8 @@ sentences until they resonate with truth, writing itself becomes a research meth
 					reality as I make my way home. I like this moment. 
 					It's a moment for reflection in the early hours on the quiet
 					morning streets. My physical body is tired and sore but I can feel it again: 
-					the momentum runs through every vein. The remaining question is how and when
-					to integrate this newly gained momentum. For now, I can only speculate..</p>
+					the <i>momentum</i> runs through every vein. The remaining question is how and when
+					to integrate this newly gained <i>momentum</i>. For now, I can only speculate..</p>
 					<br>
 
 				<p>From Blumenberg, I learned how light is the absolute power of being.
@@ -806,8 +792,8 @@ sentences until they resonate with truth, writing itself becomes a research meth
 					Dijkstra confirmed all thoughts I had on music being the most powerful
 					tool to let expressiveness exist. It’s a
 					gateway to a form of self that normally doesn’t get the chance to exist.
-					Through the act of dance ‘Space’ is made
-					accessible. And through ‘Space’ one can build momentum. As we navigate
+					Through the act of dance <i>‘Space’</i> is made
+					accessible. And through <i>‘Space’</i> one can build momentum. As we navigate
 					momentum, we can direct its energy toward
 					what needs it the most. This is the power of transferring gained energy
 					into the one you can give.</p>
