--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 				temporal expectancies in time and is, therefore, a specific kind of musical expectancy.” &nbsp;&nbsp;</i> <sup
 				class="footnote"><a id="fnref-9" href="#fn-9">9</a></sup></blockquote>
 				
-				Through the music and the often, external repetitive rhythms the sound interacts with the internal body rhythm of the listener such as the heart rate. When
+				<p>Through the music and the often, external repetitive rhythms the sound interacts with the internal body rhythm of the listener such as the heart rate. When
 			the rhythm adjusts and eventually synchronizes to a common frequency it then triggers an emotional response much in
 			the same way that amusement could trigger smiling. Talking about laughter; often when I'm deeply immersed in the act
 			of listening, particularly after building up towards the powerful drops, I experience this unique sensation that
