--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ a photographer and graphic designer.</p>
 <div class="subsection subsection-is-main">
 <h2 id="preperation">PREPARATION</h2>
 <br>
-<p>This piece of writing is constructed into three chapters: <br>
+<p>This piece of writing is constructed into three chapters:
 <i>—Sight, Sound, and Space.</i> I was inspired by the titles of the three-fold compilation album of tracks by
 Jeff Mills (released in 2019). Each album contains around 14 tracks, curated to embody Mills’s interpretation of the
 three words: Sight, Sound, and Space. In my text, I will embody my own interpretation of these words to take you
@@ -259,8 +259,8 @@ sentences until they resonate with truth, writing itself becomes a research meth
 		architect; Louis Kahn's philosophy because he regarded it as the <br><i>“giver of all presences.”</i><br><blockquote>Louis Kahn
 		said: <i>“Even a space intended to be dark should have just enough light from some mysterious opening to tell us
 			how dark it really is.”</i>&nbsp;&nbsp;<sup class="footnote"><a id="fnref-4" href="#fn-4">4</a></sup> </blockquote>
-			I
-		enjoy reading about the concept of light from the perspective of various disciplines. By incorporating elements from
+			
+		<p>I enjoy reading about the concept of light from the perspective of various disciplines. By incorporating elements from
 		these sources into the context of the chapter <i>‘Sight’</i> I can awaken the memories I have regarding certain scenography
 		that I have encountered in the past. That happened for instance when I stumped upon this text by philosopher Hans
 		Blumenberg:</p>
