--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 		to raves, light is more than just a tool—it's an integral part of the experience.
 		Light reveals surfaces and faces. It touches the outer 'shell' of the silhouettes of dancing bodies and colorizes the
 		often radical architectural environments into places of wonder. Light was also a central element in famous
-		architect; Louis Kahn's philosophy because he regarded it as the <br><i>“giver of all presences.”</i><br><blockquote>Louis Kahn
+		architect; Louis Kahn's philosophy because he regarded it as the <nobr><i>“giver of all presences.”</i></nobr><br><blockquote>Louis Kahn
 		said: <i>“Even a space intended to be dark should have just enough light from some mysterious opening to tell us
 			how dark it really is.”</i>&nbsp;&nbsp;<sup class="footnote"><a id="fnref-4" href="#fn-4">4</a></sup> </blockquote>
 			
